Buff /convo/ view for temporary use
Add forms that link to appropriate graph pages

--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Graphs for {{convo._name.title() }}</title>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='graphs.css') }}">
     </head>
     <body>
