--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,10 @@
                     </div>
                     <div class="panel-body" id="panel-left">
                         <p>Visualize conversation data in many different ways. How much have you chatted over the years? How does the time of day effect you messaging? What about day of week? Find out this and more below.</p>
-                        <a href="#" class="btn btn-default">Get Started</a>
+                        <form method="POST" style="display: inline-block">
+                            <input class="hide" type="text" name="redirect_page" value="graphs">
+                            <input type="submit" value="Get Started" class="btn btn-default">
+                        </form>
                     </div>
                 </div>
             </div>
@@ -98,7 +101,10 @@
                     </div>
                     <div class="panel-body" id="panel-center">
                         <p>Learn more about how you chat, accross various conversations and over different time periods. Find out which words  you use most, who contacts whom the most, what your most used emojis are, and much much more.</p>
-                        <a href="#" class="btn btn-default">Get Started</a>
+                        <form method="POST" style="display: inline-block">
+                            <input class="hide" type="text" name="redirect_page" value="">
+                            <input type="submit" value="Get Started" class="btn btn-default">
+                        </form>
                     </div>
                 </div>
             </div>
@@ -109,7 +115,10 @@
                     </div>
                     <div class="panel-body" id="panel-right">
                         <p>Generate elegant word clouds, in rectangles, circles or over images, freely controlling dozens of constraint such as color, word intensity, filtered words and more.</p>
-                        <a href="#" class="btn btn-default">Get Started</a>
+                        <form method="POST" style="display: inline-block">
+                            <input class="hide" type="text" name="redirect_page" value="">
+                            <input type="submit" value="Get Started" class="btn btn-default">
+                        </form>
                     </div>
                 </div>
             </div>
