--- a/static/graphs.css
+++ b/static/graphs.css
@@ -1,6 +1,176 @@
+body {
+	margin: 0;
+	padding: 0;
+	background: #ececec;
+}
 
+.page_contents {
+	width: 1100px;
+	height: 100vh;
+	margin: 0 auto;
+	background: #fcfffc;
+}
+
+.header-section {
+	height: 80px;
+	/*padding-top: 20px;*/
+}
+
+.header {
+    width: 80%;
+    height: 100%;
+    margin: 0 auto;
+    display: inline-block;
+}
+
+.header-btn {
+	width: 10%;
+	height: 100%;
+	display: inline-block;
+}
+
+.header-btn.prev {
+	float: left;
+}
+
+.header-btn.next, .header-btn.next button {
+	float: right;
+}
+
+.header-btn button {
+	width: 100%;
+	height: 100%;
+	cursor: pointer;
+
+	/* Please delete / change these preferences :D */
+	background-color: purple;
+}
+
+.header-btn button:hover {
+	/* Please delete / change these preferences :D */
+	background-color: red;
+}
+
+.header-btn button:focus {
+	/* Please delete / change these preferences :D */
+	background-color: blue;
+}
 
 div.hide {
     visibility: hidden;
     display: none;
+}
+
+h1 {
+	text-align: center;
+	font-family: "avenir";
+	font-size: 45px;
+    color: black;
+    margin: 0;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
+    padding: 10px 5px 0 5px;
+}
+
+.graph_body_settings {
+	width: 100%;
+	/*height: inherit;*/
+	padding: 0 4px;
+	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
+}
+
+.graph_body {
+	width: 100%;
+	height: 400px;
+	/*margin-left: 4px;*/
+}
+
+.graph {
+    width: 80%;
+    height: 100%;
+    float: left;
+    display: inline;
+    margin-right: 6px;    
+    border: 1px solid #005fff; 
+    padding-right: 1px;
+}
+
+.graph_type_button {
+	background-color: white;
+	color: black;
+    border: 1px solid #005fff; 
+	padding: 14px 40px;
+	border-radius: 8px;
+	text-align: center;
+	font-size: 14px;
+	font-family: "Lucida Grande";
+	cursor: pointer;
+	display: block;
+	margin: 16px 4px;
+	transition-duration: 0.4s;
+}
+
+.graph_type_button:hover {
+    background-color: #96b9e3; 
+    color: white;
+}
+
+.graph_type_button:focus {
+    background-color: #4484ce; 
+    border: 1px solid #005fff;
+    color: white;
+    box-shadow: none;
+    outline: none;
+}
+
+.button_box {
+	/*margin-right: 4px;*/
+}
+
+.settings-container {
+	width: 100%;
+	height: 100px;
+	margin-top: 20px;
+	background-color: yellow;
+}
+
+.setings-header {
+	
+	min-height: 20%;
+	margin-top: -20%;
+}
+
+div[data-settings-num="0"] {
+	height: 80%;
+	width: 80%;
+
+	/* Please delete / change these colors :D*/
+	background-color: #BA55D3; 
+}
+
+div[data-settings-num="1"] {
+	height: 80%;
+	width: 80%;
+
+	/* Please delete / change these colors :D*/
+	background-color: green; 
+}
+
+div[data-settings-num="2"] {
+	height: 80%;
+	width: 80%;
+
+	/* Please delete / change these colors :D*/
+	background-color: red; 
+}
+
+div[data-settings-num="3"] {
+	height: 80%;
+	width: 80%;
+
+	/* Please delete / change these colors :D*/
+	background-color: orange; 
 }
