--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -40,19 +40,19 @@
                 <!-- Settings -->
                 <div class="settings-container">
                     <div class="settings-header">
-                        Maybe some sort of title here?
+                        GRAPH SETTINGS
                     </div>
-                    <div class="settings-body hide" data-settings-num="0">
+                    <div class="settings-body" data-settings-num="0">
                         maybe some sort of settings in here? Try clicking the buttons on the right in order.
                     </div>
-                    <div class="settings-body hide" data-settings-num="1">
+                    <div class="settings-body" data-settings-num="1">
                         Add the buttons and settings for each graph in the appropriate div in the "settings" section.
                     </div>
-                    <div class="settings-body hide" data-settings-num="2">
+                    <div class="settings-body" data-settings-num="2">
                         The data-settings-num corresponds to the button and graph data elements. 
                         Each of these different colored settings sections only appear for their specific graph
                     </div>
-                    <div class="settings-body hide" data-settings-num="3">
+                    <div class="settings-body" data-settings-num="3">
                         Delete this text and modify the css at the bottom of the css file.
                     </div>
                 </div>
