--- a/static/graphs.css
+++ b/static/graphs.css
@@ -43,17 +43,17 @@ body {
 	cursor: pointer;
 
 	/* Please delete / change these preferences :D */
-	background-color: purple;
+	background-color: #ececec;
 }
 
 .header-btn button:hover {
 	/* Please delete / change these preferences :D */
-	background-color: red;
+	background-color: #fcf4cd;
 }
 
 .header-btn button:focus {
 	/* Please delete / change these preferences :D */
-	background-color: blue;
+	/*background-color: blue;*/
 }
 
 div.hide {
