--- a/templates/table.html
+++ b/templates/table.html
@@ -13,7 +13,7 @@
 
 
         <!-- Search Bar -->
-        <div class="search-area">
+        <div class="search-area hide">
             <div class="search-bar">
                 <div class="container">
                     <span class="icon"><img src="/static/resources/Search-icon.svg" /></span>
